--- a/pinia-music/package.json
+++ b/pinia-music/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3",
     "vite": "^4.1.4"
   }
